--- a/estilos.html
+++ b/estilos.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Example Title</title>
+	<title>Estilos</title>
 	<style>
         .E1 {
         color:aqua; font-size: 45px; position:absolute;
